Made the info more visible, \n it remains for 5 seconds visible without the need of hover , added an image of animals in info and solved  the problem of superposition betwen upload image and info

--- a/frontend/src/assets/About.css
+++ b/frontend/src/assets/About.css
@@ -1,3 +1,11 @@
+span img{
+
+    padding: 0;
+    height: 2em;
+    position: relative;
+    top: 0.8em;
+}
+
 .about {
     font-style: italic;
     border-radius: 10%;
@@ -19,7 +27,7 @@
     background-color: white;
 }
 
-.about:hover .info {
+.about:hover .hide {
     display: block;
 }
 
@@ -31,9 +39,10 @@
     color: green;
 }
 
-.info {
+.hide{
     display: none;
 }
+
 
 .info p{
     margin-bottom: -6;
