--- a/frontend/src/assets/uploadPhotos.css
+++ b/frontend/src/assets/uploadPhotos.css
@@ -6,12 +6,13 @@
     border-radius: 20px;
     display: flex;
     width: 90vw;
-    height: 90%;
+    height: 78%;
     max-width: 20cm;
-    padding:2% 10% 5% 10%;
+    padding:0% 10% 5% 10%;
     box-sizing: border-box;
-    z-index: 7;
-    position: absolute;
+    z-index:410;
+    position: relative;
+    top:5%;
     
 }
 
